deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: structured-log
spec:
  selector:
    app: structured-log-web
  ports:
    - port: 80
      targetPort: 80
